<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="rg_name">名字</string>
    <string name="rg_change_pwd">修改密码</string>
    <string name="rg_my_message">我的消息</string>
    <string name="rg_my_record">充值记录</string>
    <string name="rg_cancle_user">注销账号</string>
    <string name="rg_my_accounts">鱼丸互动账号</string>
    <string name="rg_user_name">qq411860630</string>
    <string name="rg_logining">正在登陆...</string>
    <string name="rg_hint">提示</string>
    <string name="rg_sure">确定</string>
    <string name="rg_cancel">取消</string>
    <string name="rg_is_cancel_pay">是否取消本次支付</string>
    <string name="rg_accounts">账号</string>
    <string name="rg_input_accounts">请输入账号</string>
    <string name="rg_input_pwd">请输入密码</string>
    <string name="rg_find_pwd">找回密码</string>
    <string name="rg_notice">注意：修改密码成功后会重新登陆！</string>
    <string name="rg_input_history_pwd">输入原始密码</string>
    <string name="rg_pwd_len">6-18位新密码</string>
    <string name="rg_confim_pwd">重复输入新密码</string>
    <string name="rg_show_pwd">显示密码</string>
    <string name="rg_save_change">保存修改</string>
    <string name="rg_accounts_register">账号：</string>
    <string name="rg_hint_register">数字字母组合</string>
    <string name="rg_pwd_accounts">账号：</string>
    <string name="rg_pwd_register">密码：</string>
    <string name="rg_pwd_register_confim">6-18位字符</string>
    <string name="re_title">标题</string>
</resources>
