<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/rg_dialog_normal_bg"
    android:orientation="vertical"
    android:padding="15dp" >

    <TextView
        android:id="@+id/tv_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/rg_hint"
        android:textColor="@color/text_default"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_msg"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="15dp"
        android:layout_weight="1"
        android:text="@string/rg_is_cancel_pay"
        android:textColor="@color/text_default"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/rg_dialog_normal_cancel_selector"
            android:gravity="center"
            android:text="@string/rg_cancel"
            android:textColor="@color/text_default"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/rg_dialog_normal_confirm_selector"
            android:gravity="center"
            android:text="@string/rg_sure"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>